--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8757cf66",
+   "id": "ae5b27b1",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c233f89",
+   "id": "d84194be",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d761b7b9",
+   "id": "12131abe",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cf3d72d",
+   "id": "1fc70e46",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70631d7e",
+   "id": "98ef57a9",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b63eb5c",
+   "id": "bd5ba4ba",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1bd191ec",
+   "id": "5fb0c939",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:29.203039Z",
-     "iopub.status.busy": "2025-01-30T09:34:29.202850Z",
-     "iopub.status.idle": "2025-01-30T09:34:32.123517Z",
-     "shell.execute_reply": "2025-01-30T09:34:32.122931Z"
+     "iopub.execute_input": "2025-01-30T10:01:25.010643Z",
+     "iopub.status.busy": "2025-01-30T10:01:25.010450Z",
+     "iopub.status.idle": "2025-01-30T10:01:28.566894Z",
+     "shell.execute_reply": "2025-01-30T10:01:28.566359Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf127083",
+   "id": "fa7f7664",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "557321f4",
+   "id": "7336fbc6",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d43091b",
+   "id": "4fd8db36",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2f8ea97",
+   "id": "e3fa0d53",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5db0e1c",
+   "id": "cceab3f7",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41be20ea",
+   "id": "40a551b3",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc944dbc",
+   "id": "271a26a4",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7846ff0",
+   "id": "e826c6e5",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "60b2673a",
+   "id": "45f9a601",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:32.125841Z",
-     "iopub.status.busy": "2025-01-30T09:34:32.125399Z",
-     "iopub.status.idle": "2025-01-30T09:34:34.092123Z",
-     "shell.execute_reply": "2025-01-30T09:34:34.091535Z"
+     "iopub.execute_input": "2025-01-30T10:01:28.569198Z",
+     "iopub.status.busy": "2025-01-30T10:01:28.568723Z",
+     "iopub.status.idle": "2025-01-30T10:01:31.023221Z",
+     "shell.execute_reply": "2025-01-30T10:01:31.022659Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6bf7f23",
+   "id": "58d2266e",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "27643b44",
+   "id": "3e93bd29",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:34.094261Z",
-     "iopub.status.busy": "2025-01-30T09:34:34.093932Z",
-     "iopub.status.idle": "2025-01-30T09:34:34.097339Z",
-     "shell.execute_reply": "2025-01-30T09:34:34.096817Z"
+     "iopub.execute_input": "2025-01-30T10:01:31.025352Z",
+     "iopub.status.busy": "2025-01-30T10:01:31.024923Z",
+     "iopub.status.idle": "2025-01-30T10:01:31.028646Z",
+     "shell.execute_reply": "2025-01-30T10:01:31.028041Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5402331d",
+   "id": "d6ebee71",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b68f7e6",
+   "id": "6576a68d",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fe40d4e",
+   "id": "addc8d76",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "876006f3",
+   "id": "e1a6b0c3",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "137e9e50",
+   "id": "523ae422",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:34.099240Z",
-     "iopub.status.busy": "2025-01-30T09:34:34.099062Z",
-     "iopub.status.idle": "2025-01-30T09:34:34.142033Z",
-     "shell.execute_reply": "2025-01-30T09:34:34.141518Z"
+     "iopub.execute_input": "2025-01-30T10:01:31.030716Z",
+     "iopub.status.busy": "2025-01-30T10:01:31.030377Z",
+     "iopub.status.idle": "2025-01-30T10:01:31.079364Z",
+     "shell.execute_reply": "2025-01-30T10:01:31.078663Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77d315c3",
+   "id": "0f0989b3",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "aea1e5fe",
+   "id": "f6afc365",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:34.143751Z",
-     "iopub.status.busy": "2025-01-30T09:34:34.143574Z",
-     "iopub.status.idle": "2025-01-30T09:34:34.211023Z",
-     "shell.execute_reply": "2025-01-30T09:34:34.210474Z"
+     "iopub.execute_input": "2025-01-30T10:01:31.081570Z",
+     "iopub.status.busy": "2025-01-30T10:01:31.081039Z",
+     "iopub.status.idle": "2025-01-30T10:01:31.160700Z",
+     "shell.execute_reply": "2025-01-30T10:01:31.160068Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d19952e",
+   "id": "84f97751",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f96e436e",
+   "id": "8f0ece52",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "28cfbbbf",
+   "id": "f34949d0",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:34.212851Z",
-     "iopub.status.busy": "2025-01-30T09:34:34.212668Z",
-     "iopub.status.idle": "2025-01-30T09:34:34.241262Z",
-     "shell.execute_reply": "2025-01-30T09:34:34.240798Z"
+     "iopub.execute_input": "2025-01-30T10:01:31.162990Z",
+     "iopub.status.busy": "2025-01-30T10:01:31.162592Z",
+     "iopub.status.idle": "2025-01-30T10:01:31.197747Z",
+     "shell.execute_reply": "2025-01-30T10:01:31.197187Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7db6ab9",
+   "id": "b70ba6fb",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6bc7b546",
+   "id": "949db1fd",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba302a9",
+   "id": "b3c15877",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6312b523",
+   "id": "eb8c7342",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac15b34a",
+   "id": "97e12ac9",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "379174d3",
+   "id": "5f432a92",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:34.243181Z",
-     "iopub.status.busy": "2025-01-30T09:34:34.242858Z",
-     "iopub.status.idle": "2025-01-30T09:34:34.247003Z",
-     "shell.execute_reply": "2025-01-30T09:34:34.246444Z"
+     "iopub.execute_input": "2025-01-30T10:01:31.199941Z",
+     "iopub.status.busy": "2025-01-30T10:01:31.199566Z",
+     "iopub.status.idle": "2025-01-30T10:01:31.204580Z",
+     "shell.execute_reply": "2025-01-30T10:01:31.203851Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "018ccc6d",
+   "id": "c5a0152d",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a22366c2",
+   "id": "6211d9b2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:34.248618Z",
-     "iopub.status.busy": "2025-01-30T09:34:34.248447Z",
-     "iopub.status.idle": "2025-01-30T09:34:34.251280Z",
-     "shell.execute_reply": "2025-01-30T09:34:34.250823Z"
+     "iopub.execute_input": "2025-01-30T10:01:31.206671Z",
+     "iopub.status.busy": "2025-01-30T10:01:31.206453Z",
+     "iopub.status.idle": "2025-01-30T10:01:31.209737Z",
+     "shell.execute_reply": "2025-01-30T10:01:31.209092Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90bc9156",
+   "id": "acfbdaca",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "33b937f4",
+   "id": "7965a340",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:34.253047Z",
-     "iopub.status.busy": "2025-01-30T09:34:34.252717Z",
-     "iopub.status.idle": "2025-01-30T09:34:36.815908Z",
-     "shell.execute_reply": "2025-01-30T09:34:36.815288Z"
+     "iopub.execute_input": "2025-01-30T10:01:31.211779Z",
+     "iopub.status.busy": "2025-01-30T10:01:31.211394Z",
+     "iopub.status.idle": "2025-01-30T10:01:34.114472Z",
+     "shell.execute_reply": "2025-01-30T10:01:34.113774Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27b96ab3",
+   "id": "4fa810dc",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d5cf5fd",
+   "id": "13d21b4e",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de0067dc",
+   "id": "22bff3bc",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "466d10c5",
+   "id": "f1c8c6c0",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8c528ee6",
+   "id": "1ddf0ce2",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:36.818051Z",
-     "iopub.status.busy": "2025-01-30T09:34:36.817715Z",
-     "iopub.status.idle": "2025-01-30T09:34:36.821163Z",
-     "shell.execute_reply": "2025-01-30T09:34:36.820619Z"
+     "iopub.execute_input": "2025-01-30T10:01:34.116782Z",
+     "iopub.status.busy": "2025-01-30T10:01:34.116378Z",
+     "iopub.status.idle": "2025-01-30T10:01:34.120137Z",
+     "shell.execute_reply": "2025-01-30T10:01:34.119486Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f9bd27d3ec0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f430c40bec0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a689cb44",
+   "id": "3768d5be",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43beb6ea",
+   "id": "d28feadf",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3fe3c64",
+   "id": "fc6c6b6d",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6202251",
+   "id": "6574708e",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "28be4f20",
+   "id": "210b5f4e",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:36.822943Z",
-     "iopub.status.busy": "2025-01-30T09:34:36.822638Z",
-     "iopub.status.idle": "2025-01-30T09:34:36.825643Z",
-     "shell.execute_reply": "2025-01-30T09:34:36.825021Z"
+     "iopub.execute_input": "2025-01-30T10:01:34.122236Z",
+     "iopub.status.busy": "2025-01-30T10:01:34.121854Z",
+     "iopub.status.idle": "2025-01-30T10:01:34.125140Z",
+     "shell.execute_reply": "2025-01-30T10:01:34.124475Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b39c4d8c",
+   "id": "34580ed1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T09:34:36.827432Z",
-     "iopub.status.busy": "2025-01-30T09:34:36.827063Z",
-     "iopub.status.idle": "2025-01-30T09:34:37.876162Z",
-     "shell.execute_reply": "2025-01-30T09:34:37.875639Z"
+     "iopub.execute_input": "2025-01-30T10:01:34.126997Z",
+     "iopub.status.busy": "2025-01-30T10:01:34.126659Z",
+     "iopub.status.idle": "2025-01-30T10:01:35.276005Z",
+     "shell.execute_reply": "2025-01-30T10:01:35.275384Z"
     }
    },
    "outputs": [
